@@ -1,6 +1,6 @@
 /* SOGoDomainDefaults.h - this file is part of SOGo
  *
- * Copyright (C) 2009-2016 Inverse inc.
+ * Copyright (C) 2009-2019 Inverse inc.
  *
  * This file is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -51,6 +51,7 @@
 - (BOOL) sieveScriptsEnabled;
 - (BOOL) forwardEnabled;
 - (int) forwardConstraints;
+- (NSArray *) forwardConstraintsDomains;
 - (BOOL) vacationEnabled;
 - (NSString *) vacationDefaultSubject;
 - (NSString *) vacationHeaderTemplateFile;
