@@ -1,6 +1,6 @@
 /* UIxPreferences.m - this file is part of SOGo
  *
- * Copyright (C) 2007-2018 Inverse inc.
+ * Copyright (C) 2007-2019 Inverse inc.
  *
  * This file is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -1493,6 +1493,18 @@ static NSArray *reminderValues = nil;
   dd = [[context activeUser] domainDefaults];
 
   return [NSString stringWithFormat: @"%d", [dd forwardConstraints]];
+}
+
+- (NSString *) forwardConstraintsDomains
+{
+  NSMutableArray *domains;
+  SOGoDomainDefaults *dd;
+
+  dd = [[context activeUser] domainDefaults];
+  domains = [NSMutableArray array];
+  [domains addObjectsFromArray: [dd forwardConstraintsDomains]];
+
+  return [domains jsonRepresentation];
 }
 
 //
