@@ -3,6 +3,7 @@
 
 New features
  - [core] Debian 10 (Buster) support for x86_64 (#4775)
+ - [core] now possible to specify which domains you can forward your mails to
 
 Enhancements
  - [web] avoid saving an empty calendar name
